When WKWebView prepares the session state blob, we should be able to filter it. https://bugs.webkit.org/show_bug.cgi?id=159410

Add a SPI to WKWebView so that a client can decide how to filter backforward items
when WKWebView perparing session state.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2016-07-08
Reviewed by Brady Eidson.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _sessionStateWithFilter:]): When preparing session state, check each
backforward item against the filter block.
* UIProcess/API/Cocoa/WKWebViewPrivate.h: Add the SPI _sessionStateWithFilter:

Canonical link: https://commits.webkit.org/177732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203014 268f45cc-cd09-0410-ab3c-d52691b4dbfc